--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@metaplex-foundation/mpl-candy-machine": "6.0.0-alpha.16",
-    "@metaplex-foundation/mpl-toolbox": "^0.8.0",
     "@metaplex-foundation/mpl-token-metadata": "3.0.0-alpha.24",
+    "@metaplex-foundation/mpl-toolbox": "^0.8.0",
     "@metaplex-foundation/umi": "^0.8.4",
     "@metaplex-foundation/umi-bundle-defaults": "^0.8.4",
     "@metaplex-foundation/umi-rpc-web3js": "^0.8.4",
@@ -30,12 +30,14 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/react-slick": "^0.23.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^10.12.16",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "typescript": "4.9.5"
   }
 }
