--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,6 @@ NEXT_PUBLIC_CANDY_MACHINE_ID=B6NAQhABSJtW3W2rcwBZfy1nYVc5pdedaWD4vH9MDHYH
 NEXT_PUBLIC_LUT=CwtbagBeW2sbjyBRLR7XjZLy6QfggeeRUBtZBsdgFEbZ
 NEXT_PUBLIC_ENVIRONMENT=devnet
 NEXT_PUBLIC_RPC=https://api.devnet.solana.com
+NEXT_PUBLIC_BUYMARKBEER=true
 #NEXT_PUBLIC_ENVIRONMENT=mainnet-beta
 #NEXT_PUBLIC_RPC=https://solana-mainnet.rpc.extrnode.com
