remove devnet dummy values

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-NEXT_PUBLIC_CANDY_MACHINE_ID=B6NAQhABSJtW3W2rcwBZfy1nYVc5pdedaWD4vH9MDHYH
-NEXT_PUBLIC_LUT=CwtbagBeW2sbjyBRLR7XjZLy6QfggeeRUBtZBsdgFEbZ
+NEXT_PUBLIC_CANDY_MACHINE_ID=
+# Is provided to you by the ui when initializing
+NEXT_PUBLIC_LUT=
 NEXT_PUBLIC_ENVIRONMENT=devnet
 NEXT_PUBLIC_RPC=https://api.devnet.solana.com
 NEXT_PUBLIC_BUYMARKBEER=true
