--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
+# Enter the Candy Machine Address below
 NEXT_PUBLIC_CANDY_MACHINE_ID=
+# Show box to choose how many NFTs to mint.
+NEXT_PUBLIC_MULTIMINT=true
 # Is provided to you by the ui when initializing
 NEXT_PUBLIC_LUT=
 NEXT_PUBLIC_ENVIRONMENT=devnet
