add max mint amount

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 NEXT_PUBLIC_CANDY_MACHINE_ID=
 # Show box to choose how many NFTs to mint.
 NEXT_PUBLIC_MULTIMINT=true
+NEXT_PUBLIC_MAXMINTAMOUNT=15
 # Is provided to you by the ui when initializing
 NEXT_PUBLIC_LUT=
 NEXT_PUBLIC_ENVIRONMENT=devnet
