--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@metaplex-foundation/mpl-candy-machine": "6.0.0-alpha.16",
-    "@metaplex-foundation/mpl-token-metadata": "3.0.0-alpha.24",
+    "@metaplex-foundation/mpl-candy-machine": "6.0.0",
+    "@metaplex-foundation/mpl-token-metadata": "3.0.0",
     "@metaplex-foundation/mpl-toolbox": "^0.8.0",
     "@metaplex-foundation/umi": "^0.8.4",
     "@metaplex-foundation/umi-bundle-defaults": "^0.8.4",
